--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tanstack/react-query": "^5.51.1",
+    "axios": "^1.7.2",
     "leaflet": "^1.9.4",
     "next": "14.2.4",
     "react": "^18",
